Interval 10 minutes and styles

--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,7 +1,7 @@
 <section class="section-main text-center">
     <form action="">
         <div class="row">
-            <div class="form-group px-3 col-sm-4 offset-md-2">
+            <div class="form-group px-3 col-sm-4 offset-sm-2">
                 <div class="input-group mb-3">
                     <div class="input-group-prepend">
                         <span class="input-group-text">US $</span>
