--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -3,13 +3,13 @@
 
         <div class="row">
             <div class="col-md-2 col-sm-3 px-5 py-5 col-centered">
-                <img class="img-fluid mb-3 d-block mx-auto" src="../../assets/imgprofile.png" alt="">
+                <img id="img-profile" class="img-fluid mb-3 d-block mx-auto" src="../../assets/imgprofile.png" alt="">
             </div>
         </div>
         <h1 class="text-uppercase mb-0">Belatrix Money Exchange</h1>
         <hr class="style7">
         <div class="row">
-            <div class="col-md-6 col-centered">
+            <div class="col-md-6 col-xs-12 col-centered">
                 <div class="row">
                     <div class="col-md-2 offset-md-2 top-c">
                         <div></div>
