Validation of inputs

--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,47 +1,55 @@
 <section class="section-main text-center">
-    <form action="">
+    <form [formGroup]="formName">
         <div class="row">
             <div class="form-group px-3 col-sm-4 offset-sm-2">
                 <div class="input-group mb-3">
                     <div class="input-group-prepend">
                         <span class="input-group-text">US $</span>
                     </div>
-                    <input type="text" name="dollar" aria-label="Amount of dollars." class="form-control" [(ngModel)]="dollar" />
+                    <input type="number" formControlName="numberInput" step=".0001" min="0" name="dollar" aria-label="Amount of dollars." class="form-control" [(ngModel)]="dollar" />
 
-                    <div class="input-group-append">
-                        <span class="input-group-text">.00</span>
+                    <div class="input-group-append ">
+                        <span class="input-group-text ">00</span>
                     </div>
                 </div>
             </div>
 
-            <div class="form-group px-3 col-sm-4">
-                <div class="input-group mb-3">
-                    <div class="input-group-prepend">
-                        <span class="input-group-text">€</span>
+
+
+            <div class="form-group px-3 col-sm-4 ">
+                <div class="input-group mb-3 ">
+                    <div class="input-group-prepend ">
+                        <span class="input-group-text ">€</span>
                     </div>
-                    <input type="text" name="euro" aria-label="Amount of euros." class="form-control read-only" readonly [(ngModel)]="euro" />
-                    <div class="input-group-append">
-                        <span class="input-group-text">.00</span>
+                    <input type="text" formControlName="numberInputEuro" name="euro " aria-label="Amount of euros. " class="form-control read-only " readonly [(ngModel)]="euro " />
+                    <div class="input-group-append ">
+                        <span class="input-group-text ">00</span>
                     </div>
                 </div>
             </div>
 
         </div>
         <div class="row">
-            <div class="col-md-4 offset-md-4">
-                <div class="row">
-                    <div class="col-md-6"><button type="button" type="button" value="llamar metodo" (click)="convertDollarToEuro()" class="belatrix-btn">
-                            <span class="play-icon align-middle"></span>
-                            <span class="align-middle">Call</span>
+            <div class="col-sm-8 offset-sm-2">
+                <small class="form-text text-muted" *ngIf="formName.get('numberInput').touched && formName.get('numberInput').hasError('required')">This field is required!</small>
+                <small class="form-text text-muted" *ngIf="formName.get('numberInput').touched && formName.get('numberInput').hasError('pattern')">Number must be a decimal with a maximum of 4 decimals!</small>
+            </div>
+        </div>
+        <div class="row ">
+            <div class="col-md-4 offset-md-4 ">
+                <div class="row ">
+                    <div class="col-md-6 "><button type="button" type="button " value="llamar metodo " (click)="convertDollarToEuro() " class="belatrix-btn ">
+                            <span class="play-icon align-middle "></span>
+                            <span class="align-middle ">Call</span>
                         </button></div>
-                    <div class="col-md-6"><button type="button" type="button" value="llamar metodo" (click)="convertDollarToEuroAsync()" class="belatrix-btn">
-                            <span class="play-icon align-middle"></span>
-                            <span class="align-middle">Call Async</span>
+                    <div class="col-md-6 "><button type="button" [disabled]="formName.invalid" type="button " value="llamar metodo " (click)="convertDollarToEuroAsync() " class="belatrix-btn ">
+                            <span class="play-icon align-middle "></span>
+                            <span class="align-middle ">Call Async</span>
                         </button></div>
                 </div>
             </div>
         </div>
-        <div class="hidden">
+        <div class="hidden ">
             <br> {{objectApi | json}}
             <br> {{dollar}}
             <br> {{euro}}
